--- a/style.css
+++ b/style.css
@@ -29,7 +29,19 @@ body {
   background: linear-gradient(180deg, rgba(45, 69, 125, 1) 0%, rgba(15, 23, 42, 1) 100%);
 }
 
+main {
+  max-width: 936px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .fullname {
   font-weight: 800;
-  font-size: 28px;
+  font-size: 56px;
+}
+
+.position {
+  font-size: 20px;
 }
