--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,14 @@
   --dark-link-underline: rgba(119, 51, 255, 0.36);
 }
 
+h1 {
+  margin: 0;
+}
+
+p {
+  margin: 0;
+}
+
 html {
   font-family: "Plus Jakarta Sans", sans-serif;
   color: var(--light-border);
@@ -40,8 +48,12 @@ main {
 .fullname {
   font-weight: 800;
   font-size: 56px;
+  margin-top: 80px;
 }
 
 .position {
   font-size: 20px;
+  margin-top: 8px;
+  font-weight: 500;
+  color: var(--dark-text-secondary);
 }
