--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,6 @@ html {
 }
 
 body {
-  height: 100vh;
   background: linear-gradient(180deg, rgba(45, 69, 125, 1) 0%, rgba(15, 23, 42, 1) 100%);
 }
 
@@ -56,4 +55,20 @@ main {
   margin-top: 8px;
   font-weight: 500;
   color: var(--dark-text-secondary);
+}
+
+.contacts {
+  margin-top: 40px;
+  font-size: 14px;
+}
+
+.email-location-block {
+  display: flex;
+  gap: 16px;
+}
+
+.email-location {
+  display: flex;
+  gap: 4px;
+  align-items: center;
 }
