--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@ h1 {
   margin: 0;
 }
 
+h2 {
+  margin: 0;
+}
+
 p {
   margin: 0;
 }
@@ -37,6 +41,7 @@ html {
 }
 
 body {
+  min-height: 100vh;
   background: linear-gradient(180deg, rgba(45, 69, 125, 1) 0%, rgba(15, 23, 42, 1) 100%);
   overflow-x: hidden;
 }
@@ -116,8 +121,33 @@ main {
   border-color: #5865f2;
 }
 
-.vertical-line {
+.underheader-vertical-line {
   width: 100vw;
   border: 1px solid var(--light-text-secondary);
   margin-top: 32px;
+}
+
+.info-block {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  font-size: 18px;
+}
+
+.info {
+  width: 680px;
+}
+
+.about-me {
+  margin-top: 64px;
+}
+
+.info.about {
+  line-height: 28px;
+}
+
+.vertical-line {
+  width: 100%;
+  border: 1px solid var(--light-border);
+  margin-top: 28px;
 }
