--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,7 @@ main {
   justify-content: space-between;
   width: 100%;
   font-size: 18px;
+  margin-top: 28px;
 }
 
 .info {
@@ -150,4 +151,26 @@ main {
   width: 100%;
   border: 1px solid var(--light-border);
   margin-top: 28px;
+}
+
+.education-info-block {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.education-info {
+  display: flex;
+  flex: 3;
+}
+
+.date-info {
+  display: flex;
+  flex: 1;
+  justify-content: flex-end;
+  gap: 4px;
+}
+
+.education-info-block.master {
+  margin-top: 20px;
 }
