--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,9 @@ main {
 
 .info {
   width: 680px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .about-me {
@@ -153,15 +156,15 @@ main {
   margin-top: 28px;
 }
 
-.education-info-block {
+.info-block-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.education-info {
+.text-info {
   display: flex;
-  flex: 3;
+  flex: 2;
 }
 
 .date-info {
@@ -169,8 +172,4 @@ main {
   flex: 1;
   justify-content: flex-end;
   gap: 4px;
-}
-
-.education-info-block.master {
-  margin-top: 20px;
 }
