--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,14 @@ main {
   align-items: center;
 }
 
+header {
+  max-width: 936px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .fullname {
   font-weight: 800;
   font-size: 56px;
