refactor: change links, skills, languages lists from div to ul

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,15 @@ a {
   text-decoration: none;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
 html {
   font-family: "Plus Jakarta Sans", sans-serif;
   color: var(--light-border);
